--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="overlay"><h2>We are coming soon</h2>
         <h3 id="end-date">08 10 2022 01:07AM</h3>
         <div class="col">
-            <div><label>Days</label><input type="text" readonly value="0"></div><br>
+            <div><label>Dayss</label><input type="text" readonly value="0"></div><br>
             <div><label>Hours</label><input type="text" readonly value="0"></div><br>
             <div><label>Minutes</label><input type="text" readonly value="0"></div><br>
             <div><label>Seconds</label><input type="text" readonly value="0"></div>
